header/cpp/General_Functions.h

MAIV2DLL_EXPORT_CHAR	GetSerialNumber(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetCustomer_Name(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetCustomer_Number(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetCustomer_DateOfPurchase(uint nInstance);
MAIV2DLL_EXPORT		GetADChannels(uint nInstance);
MAIV2DLL_EXPORT		GetADChannelsNumberOfOversamplingModes(uint nInstance);
MAIV2DLL_EXPORT		GetADChannelsNumberOfGainModes(uint nInstance);
MAIV2DLL_EXPORT		GetADSampleWidth(uint nInstance);
MAIV2DLL_EXPORT		GetADSampleRate(uint nInstance);
MAIV2DLL_EXPORT		GetDAChannels(uint nInstance);
MAIV2DLL_EXPORT		GetDASampleWidth(uint nInstance);
MAIV2DLL_EXPORT		GetDASampleRate(uint nInstance);
MAIV2DLL_EXPORT		GetTTLChannels(uint nInstance);
MAIV2DLL_EXPORT		GetTTLSampleWidth(uint nInstance);
MAIV2DLL_EXPORT		GetTTLSampleRate(uint nInstance);
MAIV2DLL_EXPORT		GetCTChannels(uint nInstance);
MAIV2DLL_EXPORT		GetCTSampleWidth(uint nInstance);
MAIV2DLL_EXPORT		GetCTSampleRate(uint nInstance);
MAIV2DLL_EXPORT		GetPWMChannels(uint nInstance);
MAIV2DLL_EXPORT		GetPWMSampleWidth(uint nInstance);
MAIV2DLL_EXPORT		GetPWMSampleRate(uint nInstance);
MAIV2DLL_EXPORT		GetSoftwareExtension(uint nInstance, uint* pSWExtension);
MAIV2DLL_EXPORT		GetHardwareExtension(uint nInstance, uint* pHWExtension);
MAIV2DLL_EXPORT		GetMeasurementProcessorVersion(uint nInstance);
MAIV2DLL_EXPORT		GetControllerFirmwareVersion(uint nInstance);
MAIV2DLL_EXPORT		GetSystemDriverVersion(uint nInstance, char DLLVersion[]);
MAIV2DLL_EXPORT		PrivateFlashDataRead(uint nInstance, uchar PrivateData[], uint nLength);
MAIV2DLL_EXPORT		PrivateFlashDataWrite(uint nInstance, uchar PrivateData[], uint nLength);
MAIV2DLL_EXPORT		PrivateFlashDataClear(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetDLLVersion();
MAIV2DLL_EXPORT_CHAR	GetLIBVersion();
MAIV2DLL_EXPORT		GetCardIDBySerial(char Serial[], uint * nCardID);
MAIV2DLL_EXPORT		GetDeviceInfo(uint nCardID, int * nDeviceType, char Serial[]);
MAIV2DLL_EXPORT		GetNumberOfBurstsOnADController(uint nCardID, uint * nNumberOfBursts);
MAIV2DLL_EXPORT		GetNumberOfBurstsOnCTController(uint nCardID, uint * nNumberOfBursts);
MAIV2DLL_EXPORT		AlteraRegisterRead(uint nCardID, int   nAdress,  uint * nRegisterValue);
MAIV2DLL_EXPORT		AlteraRegisterWrite(uint nCardID, int   nAdress,  uint  nRegisterValue);