header/python/maiv2.py

    
    _internalLObj.GetSerialNumber.argtypes = [ctypes.c_uint]
    _internalLObj.GetSerialNumber.restype = ctypes.c_char_p
	
    _internalLObj.GetCustomer_Name.argtypes = [ctypes.c_uint]
    _internalLObj.GetCustomer_Name.restype = ctypes.c_char_p
    
    _internalLObj.GetCustomer_Number.argtypes = [ctypes.c_uint]
    _internalLObj.GetCustomer_Number.restype = ctypes.c_char_p
    
    _internalLObj.GetCustomer_DateOfPurchase.argtypes = [ctypes.c_uint]
    _internalLObj.GetCustomer_DateOfPurchase.restype = ctypes.c_char_p
    
    _internalLObj.GetADChannels.argtypes = [ctypes.c_uint]
    _internalLObj.GetADChannels.restype = ctypes.c_int 
    _internalLObj.GetADChannels.errcheck = _maierrhandle
    
    _internalLObj.GetADChannelsNumberOfOversamplingModes.argtypes = [ctypes.c_uint]
    _internalLObj.GetADChannelsNumberOfOversamplingModes.restype = ctypes.c_int 
    _internalLObj.GetADChannelsNumberOfOversamplingModes.errcheck = _maierrhandle
    
    _internalLObj.GetADChannelsNumberOfGainModes.argtypes = [ctypes.c_uint]
    _internalLObj.GetADChannelsNumberOfGainModes.restype = ctypes.c_int 
    _internalLObj.GetADChannelsNumberOfGainModes.errcheck = _maierrhandle
    
    _internalLObj.GetADSampleWidth.argtypes = [ctypes.c_uint]
    _internalLObj.GetADSampleWidth.restype = ctypes.c_int 
    _internalLObj.GetADSampleWidth.errcheck = _maierrhandle
    
    _internalLObj.GetADSampleRate.argtypes = [ctypes.c_uint]
    _internalLObj.GetADSampleRate.restype = ctypes.c_int 
    _internalLObj.GetADSampleRate.errcheck = _maierrhandle
    
    _internalLObj.GetDAChannels.argtypes = [ctypes.c_uint]
    _internalLObj.GetDAChannels.restype = ctypes.c_int 
    _internalLObj.GetDAChannels.errcheck = _maierrhandle
    
    _internalLObj.GetDASampleWidth.argtypes = [ctypes.c_uint]
    _internalLObj.GetDASampleWidth.restype = ctypes.c_int 
    _internalLObj.GetDASampleWidth.errcheck = _maierrhandle
    
    _internalLObj.GetDASampleRate.argtypes = [ctypes.c_uint]
    _internalLObj.GetDASampleRate.restype = ctypes.c_int 
    _internalLObj.GetDASampleRate.errcheck = _maierrhandle
    
    _internalLObj.GetTTLChannels.argtypes = [ctypes.c_uint]
    _internalLObj.GetTTLChannels.restype = ctypes.c_int 
    _internalLObj.GetTTLChannels.errcheck = _maierrhandle
    
    _internalLObj.GetTTLSampleWidth.argtypes = [ctypes.c_uint]
    _internalLObj.GetTTLSampleWidth.restype = ctypes.c_int 
    _internalLObj.GetTTLSampleWidth.errcheck = _maierrhandle
    
    _internalLObj.GetTTLSampleRate.argtypes = [ctypes.c_uint]
    _internalLObj.GetTTLSampleRate.restype = ctypes.c_int 
    _internalLObj.GetTTLSampleRate.errcheck = _maierrhandle
    
    _internalLObj.GetCTChannels.argtypes = [ctypes.c_uint]
    _internalLObj.GetCTChannels.restype = ctypes.c_int 
    _internalLObj.GetCTChannels.errcheck = _maierrhandle
    
    _internalLObj.GetCTSampleWidth.argtypes = [ctypes.c_uint]
    _internalLObj.GetCTSampleWidth.restype = ctypes.c_int 
    _internalLObj.GetCTSampleWidth.errcheck = _maierrhandle
    
    _internalLObj.GetCTSampleRate.argtypes = [ctypes.c_uint]
    _internalLObj.GetCTSampleRate.restype = ctypes.c_int 
    _internalLObj.GetCTSampleRate.errcheck = _maierrhandle
    
    _internalLObj.GetPWMChannels.argtypes = [ctypes.c_uint]
    _internalLObj.GetPWMChannels.restype = ctypes.c_int 
    _internalLObj.GetPWMChannels.errcheck = _maierrhandle
    
    _internalLObj.GetPWMSampleWidth.argtypes = [ctypes.c_uint]
    _internalLObj.GetPWMSampleWidth.restype = ctypes.c_int 
    _internalLObj.GetPWMSampleWidth.errcheck = _maierrhandle
    
    _internalLObj.GetPWMSampleRate.argtypes = [ctypes.c_uint]
    _internalLObj.GetPWMSampleRate.restype = ctypes.c_int 
    _internalLObj.GetPWMSampleRate.errcheck = _maierrhandle
    
    _internalLObj.GetSoftwareExtension.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetSoftwareExtension.restype = ctypes.c_int 
    _internalLObj.GetSoftwareExtension.errcheck = _maierrhandle
    
    _internalLObj.GetHardwareExtension.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetHardwareExtension.restype = ctypes.c_int 
    _internalLObj.GetHardwareExtension.errcheck = _maierrhandle
    
    _internalLObj.GetMeasurementProcessorVersion.argtypes = [ctypes.c_uint]
    _internalLObj.GetMeasurementProcessorVersion.restype = ctypes.c_int 
    _internalLObj.GetMeasurementProcessorVersion.errcheck = _maierrhandle
    
    _internalLObj.GetControllerFirmwareVersion.argtypes = [ctypes.c_uint]
    _internalLObj.GetControllerFirmwareVersion.restype = ctypes.c_int 
    _internalLObj.GetControllerFirmwareVersion.errcheck = _maierrhandle
    
    _internalLObj.GetSystemDriverVersion.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_char)]
    _internalLObj.GetSystemDriverVersion.restype = ctypes.c_int 
    _internalLObj.GetSystemDriverVersion.errcheck = _maierrhandle
    
    _internalLObj.PrivateFlashDataRead.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_ubyte), ctypes.c_uint]
    _internalLObj.PrivateFlashDataRead.restype = ctypes.c_int 
    _internalLObj.PrivateFlashDataRead.errcheck = _maierrhandle
    
    _internalLObj.PrivateFlashDataWrite.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_ubyte), ctypes.c_uint]
    _internalLObj.PrivateFlashDataWrite.restype = ctypes.c_int 
    _internalLObj.PrivateFlashDataWrite.errcheck = _maierrhandle
    
    _internalLObj.PrivateFlashDataClear.argtypes = [ctypes.c_uint]
    _internalLObj.PrivateFlashDataClear.restype = ctypes.c_int 
    _internalLObj.PrivateFlashDataClear.errcheck = _maierrhandle
    
    _internalLObj.GetDLLVersion.argtypes = []
    _internalLObj.GetDLLVersion.restype = ctypes.c_char_p
    
    _internalLObj.GetLIBVersion.argtypes = []
    _internalLObj.GetLIBVersion.restype = ctypes.c_char_p
    
    _internalLObj.GetCardIDBySerial.argtypes = [ctypes.POINTER(ctypes.c_char), ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetCardIDBySerial.restype = ctypes.c_int 
    _internalLObj.GetCardIDBySerial.errcheck = _maierrhandle
    
    _internalLObj.GetDeviceInfo.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_char)]
    _internalLObj.GetDeviceInfo.restype = ctypes.c_int 
    _internalLObj.GetDeviceInfo.errcheck = _maierrhandle
    
    _internalLObj.GetNumberOfBurstsOnADController.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetNumberOfBurstsOnADController.restype = ctypes.c_int 
    _internalLObj.GetNumberOfBurstsOnADController.errcheck = _maierrhandle
    
    _internalLObj.GetNumberOfBurstsOnCTController.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetNumberOfBurstsOnCTController.restype = ctypes.c_int 
    _internalLObj.GetNumberOfBurstsOnCTController.errcheck = _maierrhandle
    
    _internalLObj.AlteraRegisterRead.argtypes = [ctypes.c_uint, ctypes.c_int, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.AlteraRegisterRead.restype = ctypes.c_int 
    _internalLObj.AlteraRegisterRead.errcheck = _maierrhandle
    
    _internalLObj.AlteraRegisterWrite.argtypes = [ctypes.c_uint, ctypes.c_int, ctypes.c_uint]
    _internalLObj.AlteraRegisterWrite.restype = ctypes.c_int 
    _internalLObj.AlteraRegisterWrite.errcheck = _maierrhandle
    
    
    _internalLObj.GetFirstDevice.argtypes = []
    _internalLObj.GetFirstDevice.restype = ctypes.c_int 
    _internalLObj.GetFirstDevice.errcheck = _maierrhandle
    
    _internalLObj.GetNumberOfDevices.argtypes = []
    _internalLObj.GetNumberOfDevices.restype = ctypes.c_int 
    _internalLObj.GetNumberOfDevices.errcheck = _maierrhandle
    
    _internalLObj.GetDeviceHandles.argtypes = [ctypes.POINTER(ctypes.c_uint), ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.GetDeviceHandles.restype = ctypes.c_int 
    _internalLObj.GetDeviceHandles.errcheck = _maierrhandle
    
    
    _internalLObj.GetFirstDeviceByType.argtypes = [ctypes.c_uint]
    _internalLObj.GetFirstDeviceByType.restype = ctypes.c_int 
    _internalLObj.GetFirstDeviceByType.errcheck = _maierrhandle
    
    
    _internalLObj.IsDeviceOpen = maiv2libobject.IsDeviceOpen
    _internalLObj.IsDeviceOpen.argtypes = [ctypes.c_uint]
    _internalLObj.IsDeviceOpen.restype = ctypes.c_int 
    _internalLObj.IsDeviceOpen.errcheck = _maierrhandle
    
    _internalLObj.GetErrorDescription.argtypes = [ctypes.c_uint, ctypes.c_long, ctypes.POINTER(ctypes.c_char)]
    _internalLObj.GetErrorDescription.restype = ctypes.c_int 
    _internalLObj.GetErrorDescription.errcheck = _maierrhandle
    
    _internalLObj.SetGPCIFile.argtypes = [ctypes.POINTER(ctypes.c_char), ctypes.c_uint]
    _internalLObj.SetGPCIFile.restype = ctypes.c_int 
    _internalLObj.SetGPCIFile.errcheck = _maierrhandle
    
    _internalLObj.GetGPCIFilePath.argtypes = []
    _internalLObj.GetGPCIFilePath.restype = ctypes.c_char_p
    
    
    _internalLObj.PWM_StartOutput.argtypes = [ctypes.c_uint]
    _internalLObj.PWM_StartOutput.restype = ctypes.c_int 
    _internalLObj.PWM_StartOutput.errcheck = _maierrhandle
    
    _internalLObj.PWM_StopOutput.argtypes = [ctypes.c_uint]
    _internalLObj.PWM_StopOutput.restype = ctypes.c_int 
    _internalLObj.PWM_StopOutput.errcheck = _maierrhandle
    
    _internalLObj.PWM_PreparePWMOutput.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.PWM_PreparePWMOutput.restype = ctypes.c_int 
    _internalLObj.PWM_PreparePWMOutput.errcheck = _maierrhandle
    
    _internalLObj.PWM_PrepareFMOutput.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.PWM_PrepareFMOutput.restype = ctypes.c_int 
    _internalLObj.PWM_PrepareFMOutput.errcheck = _maierrhandle
    
    _internalLObj.PWM_WriteNewPWMRatio.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.PWM_WriteNewPWMRatio.restype = ctypes.c_int 
    _internalLObj.PWM_WriteNewPWMRatio.errcheck = _maierrhandle
    
    _internalLObj.PWM_WriteNewFMFrequency.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.PWM_WriteNewFMFrequency.restype = ctypes.c_int 
    _internalLObj.PWM_WriteNewFMFrequency.errcheck = _maierrhandle
    
    _internalLObj.PWM_GetPWMRatio.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.PWM_GetPWMRatio.restype = ctypes.c_int 
    _internalLObj.PWM_GetPWMRatio.errcheck = _maierrhandle
    
    _internalLObj.PWM_GetFMFrequency.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.PWM_GetFMFrequency.restype = ctypes.c_int 
    _internalLObj.PWM_GetFMFrequency.errcheck = _maierrhandle
    
    _internalLObj.Realtime_AddTriggerEntry.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_double, ctypes.c_double, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_double, ctypes.c_double, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.Realtime_AddTriggerEntry.restype = ctypes.c_int 
    _internalLObj.Realtime_AddTriggerEntry.errcheck = _maierrhandle
    
    _internalLObj.Realtime_AddFilterEntry.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_double), ctypes.c_double, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.Realtime_AddFilterEntry.restype = ctypes.c_int 
    _internalLObj.Realtime_AddFilterEntry.errcheck = _maierrhandle
    
    _internalLObj.Realtime_DesignFIRFilter.argtypes =  [ctypes.c_double, ctypes.c_uint, ctypes.c_double, ctypes.c_double, ctypes.c_bool ,ctypes.c_uint, ctypes.c_uint, ctypes.c_double, ctypes.c_bool ,  ctypes.POINTER(ctypes.c_uint),ctypes.POINTER(ctypes.c_double)]
    _internalLObj.Realtime_DesignFIRFilter.restype = ctypes.c_int 
    _internalLObj.Realtime_DesignFIRFilter.errcheck = _maierrhandle    
